# nami-core

./: CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  crate-hashes.json  flake.nix
.cargo/: config.toml
benches/: storage_kv.rs
examples/: dom_transforms.rs
src/: config.rs  lib.rs  testkit.rs
src/accessibility/: mod.rs
src/agent/: mod.rs
src/alias/: mod.rs
src/annotate/: mod.rs
src/ast/: mod.rs
src/audit_trail/: mod.rs
src/auth_saver/: mod.rs
src/autofill/: mod.rs
src/autoplay/: mod.rs
src/bfcache_policy/: mod.rs
src/blocker/: mod.rs  trackers.txt
src/boost/: mod.rs
src/bridge/: mod.rs
src/cast/: mod.rs
src/cdp/: mod.rs
src/chat/: mod.rs
src/clear_site_data/: mod.rs
src/command/: mod.rs
src/component/: mod.rs
src/console_rule/: mod.rs
src/content/: blocker.rs  mod.rs
src/cookie_banner/: mod.rs
src/cookie_jar/: mod.rs
src/crdt_room/: mod.rs
src/csp_policy/: mod.rs
src/css/: cascade.rs  mod.rs  selector.rs  values.rs
src/css_ast/: mod.rs
src/derived/: mod.rs
src/dns/: mod.rs
src/dom/: mod.rs  node.rs  tree.rs
src/dom_diff/: mod.rs
src/download/: mod.rs
src/effect/: mod.rs
src/engine/: mod.rs
src/eval/: mod.rs
src/extension/: mod.rs  signature.rs
src/feed/: mod.rs
src/find/: mod.rs
src/fingerprint_randomize/: mod.rs
src/framework/: mod.rs
src/gesture/: mod.rs
src/high_contrast/: mod.rs
src/history_policy/: mod.rs
src/i18n/: mod.rs
src/identity/: mod.rs
src/inline_lisp/: mod.rs
src/inspector/: mod.rs
src/js_runtime/: mod.rs
src/layout/: engine.rs  mod.rs
src/lisp/: mod.rs  parse.rs
src/llm/: mod.rs
src/llm_completion/: mod.rs
src/locale/: mod.rs
src/markdown/: mod.rs
src/media_session/: mod.rs
src/multiplayer_cursor/: mod.rs
src/navigation_intent/: mod.rs
src/net/: fetch.rs  mod.rs
src/network_throttle/: mod.rs
src/normalize/: mod.rs
src/offline/: mod.rs
src/omnibox/: mod.rs
src/outline/: mod.rs
src/paint/: mod.rs
src/passkey/: mod.rs
src/passwords/: mod.rs
src/permission_policy/: mod.rs
src/permission_prompt/: mod.rs
src/pip/: mod.rs
src/plan/: mod.rs
src/predicate/: mod.rs
src/prerender_rule/: mod.rs
src/presence/: mod.rs
src/profiler/: mod.rs
src/pull_refresh/: mod.rs
src/query/: mod.rs
src/reader/: mod.rs
src/reader_aloud/: mod.rs
src/redirect/: mod.rs
src/referrer/: mod.rs
src/resource_hint/: mod.rs
src/route/: mod.rs
src/routing/: mod.rs
src/scrape/: mod.rs
src/script_policy/: mod.rs
src/search_bang/: mod.rs
src/search_engine/: mod.rs
src/secure_note/: mod.rs
src/security_policy/: mod.rs
src/selector/: mod.rs  parse.rs
src/service_worker/: mod.rs
src/session/: mod.rs
src/shadow/: mod.rs
src/share/: mod.rs
src/sidebar/: mod.rs
src/simplify/: mod.rs
src/smart_bookmark/: mod.rs
src/snapshot/: mod.rs
src/space/: mod.rs
src/split/: mod.rs
src/spoof/: mod.rs
src/state/: mod.rs
src/storage/: bookmarks.rs  history.rs  kv.rs  mod.rs
src/storage_quota/: mod.rs
src/store/: mod.rs
src/subtitle/: mod.rs
src/suggestion_ranker/: mod.rs
src/suggestion_source/: mod.rs
src/summarize/: mod.rs
src/sync_channel/: mod.rs
src/tab_attestation/: mod.rs
src/tab_group/: mod.rs
src/tab_hibernate/: mod.rs
src/tab_macro/: mod.rs
src/tab_preview/: mod.rs
src/text_spacing/: mod.rs
src/time_travel/: mod.rs
src/totp/: mod.rs
src/transform/: mod.rs
src/typescape/: mod.rs
src/url_clean/: mod.rs
src/viewport/: mod.rs
src/wasm/: mod.rs
src/wasm_agent/: mod.rs
src/webgpu_policy/: mod.rs
src/zoom/: mod.rs
tests/: css_matrix.rs  end_to_end.rs  proptests.proptest-regressions  proptests.rs  render_proptests.rs
