[package]
name = "nami-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
license = "MIT"
description = "Shared browser core — HTML parsing, CSS cascade, layout, DOM, networking"
repository = "https://github.com/pleme-io/nami-core"

[features]
default = []
network = ["dep:todoku"]
config = ["dep:shikumi"]

[dependencies]
html5ever = "0.29"
markup5ever = "0.14"
lightningcss = { version = "1.0.0-alpha", features = ["visitor"] }
taffy = "0.7"
todoku = { git = "https://github.com/pleme-io/todoku", optional = true }
shikumi = { git = "https://github.com/pleme-io/shikumi", optional = true }
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[lints.clippy]
pedantic = "warn"
