[package]
name = "nami-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
license = "MIT"
description = "Shared browser core — HTML parsing, CSS cascade, layout, DOM, networking"
repository = "https://github.com/pleme-io/nami-core"

[features]
default = ["lisp"]
network = ["dep:todoku"]
config = ["dep:shikumi"]
# Programmable DOM transforms authored as tatara-lisp forms.
lisp = ["dep:tatara-lisp"]
# Layer 3 of the React-in-Lisp arc: real Lisp evaluator via
# pleme-io's tatara-eval. Enables conditionals, arithmetic, string
# ops, and lambdas inside templates / agent logic.
eval = ["lisp", "dep:tatara-eval"]

[dependencies]
html5ever = "0.29"
markup5ever = "0.14"
lightningcss = { version = "1.0.0-alpha", features = ["visitor"] }
taffy = "0.7"
todoku = { git = "https://github.com/pleme-io/todoku", optional = true }
shikumi = { git = "https://github.com/pleme-io/shikumi", optional = true }
tatara-lisp = { git = "ssh://git@github.com/pleme-io/tatara", rev = "a1062f8069bb336a87cb9b2c68a85885665e3234", optional = true }
tatara-eval = { git = "ssh://git@github.com/pleme-io/tatara", rev = "a1062f8069bb336a87cb9b2c68a85885665e3234", optional = true }
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2"
# Content-addressable snapshots. Same BLAKE3 convention as tameshi.
blake3 = "1.8"

[dev-dependencies]
# Property-based testing — fuzzes parsers + invariants across
# randomly generated inputs. dev-only, adds no runtime cost.
proptest = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[lints.clippy]
pedantic = "warn"
