[package]
name = "nami-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
license = "MIT"
description = "Shared browser core — HTML parsing, CSS cascade, layout, DOM, networking"
repository = "https://github.com/pleme-io/nami-core"

[features]
default = ["lisp"]
network = ["dep:todoku"]
config = ["dep:shikumi"]
# Programmable DOM transforms authored as tatara-lisp forms.
lisp = ["dep:tatara-lisp"]
# Layer 3 of the React-in-Lisp arc: real Lisp evaluator via
# pleme-io's tatara-eval. Enables conditionals, arithmetic, string
# ops, and lambdas inside templates / agent logic.
eval = ["lisp", "dep:tatara-eval"]
# Tree-sitter source-language parsing. JSX/TSX today; Vue/Svelte
# queued. Each grammar compiles C via `cc`, so this feature adds
# real compile time — off by default.
ts = ["dep:tree-sitter", "dep:tree-sitter-typescript", "dep:tree-sitter-svelte-next"]
# WASM/WASI agent host — sandboxed execution of precompiled modules
# with capability-gated access. Foundation for Lisp-authored scrapers
# that ship as .wasm. Heavier compile cost — opt-in.
wasm = ["dep:wasmtime", "dep:wasmtime-wasi", "dep:wasi-common"]
# Ed25519 signatures for (defextension) bundles — connects the
# browser-extension store to pleme-io's sekiban/tameshi attestation
# chain. Off by default because most runtime paths don't need it.
signatures = ["dep:ed25519-dalek", "dep:base64"]

[dependencies]
html5ever = "0.29"
markup5ever = "0.14"
lightningcss = { version = "1.0.0-alpha", features = ["visitor"] }
taffy = "0.7"
todoku = { git = "https://github.com/pleme-io/todoku", optional = true }
shikumi = { git = "https://github.com/pleme-io/shikumi", optional = true }
tatara-lisp = { git = "ssh://git@github.com/pleme-io/tatara", rev = "a1062f8069bb336a87cb9b2c68a85885665e3234", optional = true }
tatara-eval = { git = "ssh://git@github.com/pleme-io/tatara", rev = "a1062f8069bb336a87cb9b2c68a85885665e3234", optional = true }
url = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2"
# Content-addressable snapshots. Same BLAKE3 convention as tameshi.
blake3 = "1.8"
# Optional regex support for (deffind) and future DSLs that want
# pattern-matching against live page text.
regex = "1"
# Source-language parsing (JSX/TSX/Vue/Svelte). Feature-gated.
tree-sitter = { version = "0.25", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-svelte-next = { version = "0.1", optional = true }
# WASM/WASI sandboxed agent host.
wasmtime = { version = "38", optional = true, default-features = false, features = ["cranelift"] }
wasmtime-wasi = { version = "38", optional = true }
wasi-common = { version = "38", optional = true }
# Ed25519 signing — battle-tested, audited, no_std-compatible.
ed25519-dalek = { version = "2", optional = true, default-features = false, features = ["std", "rand_core"] }
# Base64 encoding for pubkeys + signatures in manifest form.
base64 = { version = "0.22", optional = true }

[dev-dependencies]
# Property-based testing — fuzzes parsers + invariants across
# randomly generated inputs. dev-only, adds no runtime cost.
proptest = "1"
# Microbenchmarks for storage + hot-path primitives.
criterion = { version = "0.7", default-features = false, features = ["rayon"] }
# RNG for generating test keypairs.
rand = "0.8"

[[bench]]
name = "storage_kv"
harness = false
path = "benches/storage_kv.rs"
# Compile WAT (WebAssembly text format) inline in tests — lets us
# verify WASM host behavior against small handwritten modules
# without needing to ship binary blobs.
wat = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[lints.clippy]
pedantic = "warn"
